--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
+.heading {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btn {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-size: 1.25rem;
+  outline: none;
+  border: none;
+  cursor: pointer;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.localbtn {
+  background-color: #1098ff;
+  margin-bottom: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.localbtn:hover {
+  background-color: #0082e4;
+}
+
+.centerAlign {
+  text-align: center;
+}
+
+.apibtn {
+  background-color: #78D68C;
+}
+
+.apibtn:hover {
+  background-color: #52ca6b;
+}
+
+.datefield {
+  margin: 0 0.75rem;
+  height: 1.5rem;
+}
+
+.chart_area{
+  margin: 2rem 0.5rem 0;
+
+}
+
+.flex {
+  display: flex;
+  gap: 1rem;  
+}
+
+.section {
+  width: 48%;
 }
